# StudyNote

./: .gitignore
C++Learning/: CMakeLists.txt
C++Learning/BoostLearning/: 1-日期时间处理-date_time.cpp  10-元组-tuple.cpp  11-多线程-thread.cpp  11-多线程间的通信-thread.cpp  11-多线程高级特性-thread.cpp  12-网络传输-asio-实战案例.cpp  12-网络传输-asio.cpp  2-lambda表达式.cpp  3-数值转换-lexical.cpp  4-格式化字符串-format.cpp  5-文件系统操作-filesystem.cpp  6-正则表达式-regex.cpp  7-生成随机数-random.cpp  8-字符串处理函数-algorithm-string.cpp  9-绑定函数-bind.cpp  CMakeLists.txt  main.cpp  tcp异步服务器.cpp
C++Learning/CppLearning/: 1-系统输入输出流.cpp  10-cpp的一些新用法.cpp.cpp  10-类的ｃｏｎｓｔ对象和nullptr.cpp  11-函数包装器.cpp  (+29 more)
DataStructureAndAlgorithm/: main.cpp
LinuxSystemProgramme/: 1-文件io.cpp  2-文件系统.cpp  CMakeLists.txt  main.cpp  touch_copy.txt
MachineLearning/: facerecognition_svm.py  knn.py  knn简单应用.py  main.py  mydata.csv  svm.py  test.dot  test.ipynb  tree.dot  决策树.py  多元线性回归.py  聚类-kmeans算法.py  逻辑回归.py
PyQt5Learning/: 10-对话框.ipynb  11-复选框.ipynb  12-切换按钮.ipynb  13-滑块控件.ipynb  14-进度条.ipynb  15-日历控件.ipynb  16-像素图像.ipynb  17-单行文本编辑框.ipynb  18-窗口分割.ipynb  2-程序图标以及面向对象编程.ipynb  20-拖放事件.ipynb  22-自定义控件.ipynb  3-使用控件实现工具提示按钮.ipynb  4-关闭窗口.ipynb  7-主窗口-菜单栏-工具栏-状态栏.ipynb  8-布局管理.ipynb  9-时间和信号.ipynb  myfile.txt  test.py  test2.py  test3.py
QTLearning/: MyTest.txt
TensorflowLearning/: checkpoint  minist训练神经网络完整版.py  model.ckpt.index  变量.py  基本用法.ipynb  张量和会话.py  损失函数.py  模型持久化.py  正则表达式.py  滑动平均模型.py  简单的神经网络样例.py  计算图.py
pythonWebCrawler/: 1-正则表达式.ipynb  网络爬虫-图片下载.ipynb  网络爬虫-小说下载.ipynb
wxpyLearning/: wxpy_puid.pkl  对话消息.ipynb  机器人对象.ipynb  聊天对象.ipynb
(+212 files in other folders)
